--- a/System Overview.tex
+++ b/System Overview.tex
@@ -245,8 +245,10 @@ Tensor harmonics:
 • Integer-only tensor operators (⊗₃,⊕₃,lap₃²)
 • Fully reversible morphic energy evolution
 
+
+ % License / Attribution:
+   % Documentation & code freely usable for research/learning.
+   % Commercial use requires 20% revenue to Ryan M Rand.
+   % Attribution: "Backlit Canopy lattice by Ryan M Rand"
 === END BACKLIT CANOPY — HARMONIC UNITY (vΔR = 0) ===
-
-
-
 
